--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,18 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width,initial-scale=1" />
 
-		<title>Svelte app</title>
+		<title>Gothello</title>
 
-		<link rel="icon" type="image/png" href="/favicon.png" />
+		<!-- <link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="stylesheet" href="/global.css" />
-		<link rel="stylesheet" href="/build/bundle.css" />
+		<link rel="stylesheet" href="/build/bundle.css" /> -->
 
-		<script defer src="/build/bundle.js"></script>
+		<!-- <script defer src="/build/bundle.js"></script> -->
 	</head>
-	<body></body>
+	<body>
+		<center>
+			<canvas id="canvas" width="500px" height="500px"></canvas>
+		</center>
+	</body>
+	<script src="main.js"></script>
 </html>
