--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,16 @@
 
 		<title>Gothello</title>
 
-		<!-- <link rel="icon" type="image/png" href="/favicon.png" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<link rel="stylesheet" href="/global.css" />
-		<link rel="stylesheet" href="/build/bundle.css" /> -->
+		<link rel="stylesheet" href="/build/bundle.css" />
 
-		<!-- <script defer src="/build/bundle.js"></script> -->
+		<script defer src="/build/bundle.js"></script>
 	</head>
 	<body>
-		<center>
+		<!-- <center>
 			<canvas id="canvas" width="500px" height="500px"></canvas>
-		</center>
+		</center> -->
 	</body>
-	<script src="main.js"></script>
+	<!-- <script src="main.js"></script> -->
 </html>
